--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -120,7 +120,7 @@
   <div ng-controller="ConfirmationController" flex flex-xs="100" layout="column" style="margin: .5rem; border: none;" class="">
     <div layout layout-align="center">
       <div layout="column">
-        <span class="md-subhead title md-padding">Update Confirmation</span>
+        <span class="md-subhead title md-padding">Confirm Update</span>
         <div flex-xs="100" layout="column" layout-align="center center"
              style="background-color: whitesmoke; border: solid thin lightblue; border-radius: 5px;" class="md-padding">
           <div ng-if="msgStatus == 0">
