--- a/client/confirms/confirm-install.html
+++ b/client/confirms/confirm-install.html
@@ -8,11 +8,11 @@
 
           <md-input-container>
 
-            <label>Update version</label>
+            <label>Release Date</label>
             <md-select ng-model="update.id" required>
-              <md-option ng-repeat="d in updates" value="{{d.id}}">{{d.releaseDate | date:short}}</md-option>
+              <md-option ng-repeat="d in updates" value="{{d.id}}">{{d.state+"  "}}{{d.releaseDate | date:short}}</md-option>
             </md-select>
-            {{ update.id }}
+
           </md-input-container>
 
           <div layout layout-align="center start" style="margin: 1rem;">
