--- a/client/index.html
+++ b/client/index.html
@@ -14,8 +14,6 @@
   <!-- Angular Material style sheet -->
   <link rel="stylesheet" href="vendor/angular-material/angular-material.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <!--chartist -->
-  <link rel="stylesheet" href="vendor/chartist/dist/chartist.css">
   <!-- Custom Font -->
   <link href='https://fonts.googleapis.com/css?family=Lato|Lora|Ubuntu' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,700italic' rel='stylesheet' type='text/css'>
@@ -141,10 +139,10 @@
   <script src="vendor/angular-google-maps/dist/angular-google-maps.min.js"></script>
 <!-- Moment -->
 <script src="vendor/moment/min/moment.min.js"></script>
-<!--Chartist -->
-<script src="vendor/chartist/dist/chartist.min.js"></script>
-<script src="vendor/angular-chartist.js/dist/angular-chartist.min.js"></script>
-  <!-- Your application bootstrap  -->
+<!--Angular Chart.js -->
+<script src="vendor/chart.js/dist/Chart.min.js"></script>
+<script src="vendor/angular-chart.js/dist/angular-chart.min.js"></script>
+<!-- Your application bootstrap  -->
 <script src="js/app.js"></script>
 <script src="js/lb-services.js"></script>
   <script src="js/mainController.js"></script>
