--- a/client/index.html
+++ b/client/index.html
@@ -113,15 +113,9 @@
 
 
 
-
-
-  <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
- <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBUZmQ8vc34NHhjEnLzFf970bmt-0ZQaVU&callback=initMap"
-          async defer></script>-->
-<!--Angular Google Map Dependencies -->
-  <script src="vendor/lodash/lodash.js"></script>
- <!-- Angular Material requires Angular.js Libraries -->
-
+<script src="vendor/lodash/lodash.js"></script>
+<!--Angular, Jquery, LoDash -->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="vendor/angular/angular.min.js"></script>
 <script src="vendor/angular-resource/angular-resource.min.js"></script>
 <script src="vendor/angular-animate/angular-animate.min.js"></script>
@@ -133,19 +127,19 @@
 
 <!-- Angular Material Library -->
 <script src="vendor/angular-material/angular-material.min.js"></script>
-<script src="https://rawgit.com/srfrnk/re-tree/master/re-tree.js" type="text/javascript"></script>
-<script src="https://rawgit.com/srfrnk/ng-device-detector/master/ng-device-detector.js" type="text/javascript"></script>
-  <script src="vendor/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
-  <script src="vendor/angular-google-maps/dist/angular-google-maps.min.js"></script>
+
 <!-- Moment -->
 <script src="vendor/moment/min/moment.min.js"></script>
 <!--Angular Chart.js -->
 <script src="vendor/chart.js/dist/Chart.min.js"></script>
 <script src="vendor/angular-chart.js/dist/angular-chart.min.js"></script>
-<!-- Your application bootstrap  -->
+<!-- bootstrap  -->
 <script src="js/app.js"></script>
 <script src="js/lb-services.js"></script>
-  <script src="js/mainController.js"></script>
+<script type="text/javascript" src="vendor/angular-fixed-table-header/src/fixed-table-header.min.js"></script>
+<script src="vendor/angularUtils-pagination/dirPagination.js"></script>
+
+<script src="js/mainController.js"></script>
 <script src="downloads/downloadController.js"></script>
 <script src="auth/authController.js"></script>
 <script src="auth/authService.js"></script>
